recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:11: error: reassignment to val
	spiral=spiral(steps-1, _, length+3, _)
              ^